# 3DM2Partition_Reduction

./: Cargo.toml  LICENSE.md  README.md
dot-files/: ejemplo_card_4.dot  test.dot
instances/3dm/: ejemplo_card_3.ron  riera.ron  test.json  test.ron
instances/partition/: ejemplo_card_3.ron  ejemplo_card_4.ron  test1.ron
src/: main.rs  partition.rs  reduction.rs  tdm.rs  utility.rs
