[package]
name = "cc_3dm_to_partition"
authors = ["Javier Correa <alu0101233598@ull.edu.es>", "José Daniel Escánez <alu01@ull.edu.es>", "Alejandro Peraza <alu0101211770@ull.edu.es>", "Nerea Rodríguez <alu01@ull.edu.es>"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ron = "*"
serde = "*"
clap = "*"
